# coda

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  rustfmt.toml
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/subcommands/: mod.rs  repl.rs  run.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: env.rs  lib.rs  utils.rs
crates/runtime/src/frontend/: lexer.rs  parser.rs  token.rs
crates/runtime/src/runtime/: ast.rs  env.rs  interpreter.rs  mod.rs  value.rs
crates/runtime/src/std/: mod.rs
crates/runtime/src/std/io/: mod.rs
crates/runtime/src/std/math/: consts.rs  mod.rs
crates/std/: Cargo.toml  README.md
crates/std/src/: lib.rs
crates/std/src/io/: mod.rs
crates/std/src/math/: consts.rs  mod.rs
examples/: test.coda  test2.coda
src/: main.rs
