[package]
name = "coda-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
coda-runtime = { path = "../runtime" }
coda-std = { path = "../std" }

[dependencies.clap]
version = "4.5"
default-features = false
features = ["std", "help", "usage", "error-context", "derive"]

[dependencies.rustyline]
version = "17.0.2"
default-features = false
features = ["with-dirs", "with-file-history"]
